src/app/components/presentational/qm-select-service/qm-select-service.component.scss
@import '../../../../styles/base/_component-manifest.scss';
//qm-flow-sub-header
.qm-flow-sub-header {
    height: 2.8rem;
    background-color: $app-theme;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 1rem;
  
    &__search {
      height: rem(34px);
      color: #111;
      vertical-align: middle;
      font-size: rem(14px);
      line-height: rem(16px);
      flex: 2;
      width: 100%;
      padding: 0.4rem 1rem;
    }
  
    &__left {
      flex: 1;
    }
  
    &__right {
      flex: 1;
      display: flex;
      justify-content: flex-end;
    }
  }

.qm-service-list__container {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: calc(100vh - 134px);
    overflow: scroll;
}

.qm-service-list__container-ext {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: calc(100vh - 100px);
    overflow: scroll;
}

.qm-service-list {

    &__item-container {
        width: 100%;
        align-items: center;
        margin-top: 20px;
    }

    &__selected-item-container {
        display: flex;
        width: 100%;
        flex-direction: row;
        align-items: center;
        justify-content: flex-start;
    }

    &__index-item {
        color: #FFFFFF;
        width: 25%;
        text-align: center;
    }

    &__header {
        text-align: left;
        width: 50%;
        margin-left: auto;
        margin-right: auto;

        @at-root [dir='rtl'] & {
            text-align: right;
        }
    }
    
    &__item {
        color: #000;
        background: #FFFFFF;
        text-align: center;
        height: 3.5em;
        line-height: 3em;
        border-radius: 3px;
        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
        max-width: 50%;
        font-size: 0.8em;
        font-weight: 500;
        margin: rem(4px);
        font-family: $primary-font-family;
        width: 50%;
        cursor: pointer;
        position: relative;
        letter-spacing: $extended-letter-spacing-2;
        margin-left: auto;
        margin-right: auto;

        &--selected {
            background-color: var(--app-theme);
            color: $primary-text-color;
            margin-left: 0;
            margin-right: 0;

            &__btn {
                color: white;
                .qm-action-btn__icon {
                    font-size: rem(15px);
                  }
            }
        }


        &--text{
            text-overflow: ellipsis;
        }

        i {
            position: absolute;
            right: 5%;
            top: 50%;
            transform: translateY(-50%);
        }
    }
}

